---------------------------------------------------------------------------------------------------
Version: 1.2.0
Date: 03. 07. 2024
  Features:
    - Play a sound when a player is blocked from placing an entity.
---------------------------------------------------------------------------------------------------
Version: 1.1.1
Date: 02. 07. 2024
  Bugfixes:
    - Fix crash caused by modifying some recipes.
---------------------------------------------------------------------------------------------------
Version: 1.1.0
Date: 02. 07. 2024
  Features:
    - Added option for only 1 inserter per side of any assembling machine, furnace, etc.
    - Added option to block the 2 or 4 tiles perpendicular to an inserter.
    - Added optional exception to placement rules for burner inserters.
    - Added distance-2 option for placement blocking.
    - Flying text messages are now shown when robots are blocked from placing something. (Already existed for player placements.)
  Changes:
    - Adjusted default options to only restrict inserter placement, shorten underground belts, and remove long inserters. By default, no recipes or speeds are changed.
---------------------------------------------------------------------------------------------------
Version: 1.0.0
Date: 24. 06. 2024
  Features:
    - Initial release.
    - Options to shorten underground belts, remove long inserters, change belt speeds, adjust recipe costs.
    - Options to restrict inserter placement: allow all, block 4 tiles, block 8 tiles, block 5x5 cross.