@@ -4,6 +4,9 @@
 	"title": "Harder Basic Logistics",
 	"author": "StephenB",
 	"factorio_version": "1.1",
-	"dependencies": ["base >= 1.1"],
+	"dependencies": [
+		"base >= 1.1",
+		"(?) miniloader >= 1.15.7"
+	],
 	"description": "Limit yourself to 1 inserter on each side of a machine. Or remove long inserters, shorten underground belts, change belt speeds, adjust recipes. A pack of tweaks to increase the complexity of belt-and-inserter logistics."
 }
